[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bamsalvage"
version = "0.1.2.2"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Sequence salvaging script from corrupted BAM files"
readme = "README.md"
licence = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "numba"]

[project.urls]
Homepage = "https://pypi.org/project/bamsalvage/"

[tool.hatchling.script]
bamsalvage="bamsalvage:main"

[project.scripts]
bamsalvage="bamsalvage:main"