[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bamsalvage"
version = "0.1.5"
authors = [
  { name="Takaho A. Endo", email="takaho.endo@gmail.com"},
]
description = "Sequence salvaging script from corrupted BAM files"
readme = "README.md"
licence = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "numba", "mgzip"]

[project.urls]
Homepage = "https://pypi.org/project/bamsalvage/"

[tool.hatchling.script]
bamsalvage="bamsalvage:main"

[project.scripts]
bamsalvage="bamsalvage:main"

[tool.hatch.build]
exclude = ["outputs/*", "old/*", "log.txt", "monitor/*"]

